create methods updated email/phone (validate)